RESOLVED FIXED16379
REGRESSION(r28525): Failures in http/tests/xmlhttprequest/response-encoding.html and fast/dom/xmlhttprequest-html-response-encoding.html
https://bugs.webkit.org/show_bug.cgi?id=16379
Summary REGRESSION(r28525): Failures in http/tests/xmlhttprequest/response-encoding.h...
Mark Rowe (bdash)
Reported 2007-12-10 06:25:55 PST
http/tests/xmlhttprequest/response-encoding.html and fast/dom/xmlhttprequest-html-response-encoding.html started failing after r28525. As of r28581 they are still failing. A reduction is: print("foo<body>bar</body>baz".replace(/.*<body>(.*)<\/body>.*/, "$1") == "bar"); With Safari 3 this displays true, but with TOT it displays false as it evaluates to "fbar" rather than "bar".
Attachments
patch (9.26 KB, patch)
2007-12-10 21:10 PST, Darin Adler
sam: review+
Mark Rowe (bdash)
Comment 1 2007-12-10 06:30:06 PST
A clearer reduction is the following: "foo<body>bar</body>baz".replace(/.*<body>(.*)<\/body>.*/, "") This should evaluate to the empty string, but is currently evaluating to "f".
Darin Adler
Comment 2 2007-12-10 21:10:30 PST
Sam Weinig
Comment 3 2007-12-10 21:52:13 PST
Comment on attachment 17836 [details] patch Beautiful as always. r=me
Darin Adler
Comment 4 2007-12-10 22:09:02 PST
Committed revision 28609.
Note You need to log in before you can comment on or make changes to this bug.